--- a/AbkarFE/src/components/login-signup/style/_preloader.scss
+++ b/AbkarFE/src/components/login-signup/style/_preloader.scss
@@ -57,7 +57,7 @@
       color: var(--Yellow, #ffd200);
       text-align: center;
       text-shadow: 0px 4px 0px #000;
-      -webkit-text-stroke-width: 2;
+      // -webkit-text-stroke-width: 1px;
       -webkit-text-stroke-color: #000;
       font-family: "Ala Typoo Medium";
       font-size: 200px;
